<resources>
    <string name="app_name">2025-2026 DAM 2A PMDM Elementos Codigo</string>

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="grupo_a">Grupo A</string>
    <string name="grupo_b">Grupo B</string>
    <string name="grupo_c">Grupo C</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>

    <string-array name="sp_ciclo">
        <item>Selecciona un ciclo</item>
        <item>SMR</item>
        <item>DAM</item>
        <item>DAW</item>
        <item>3D</item>
    </string-array>
</resources>